<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_refreshview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.andview.refreshview.XScrollView-->
        <!--android:id="@+id/xscrollview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/JobTitleTextUnderlineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/job_sheet_client_details" />

            <TextView
                style="@style/JobTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/job_sheet_client1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/JobTagTextStyle"
                    android:text="@string/job_sheet_name" />

                <TextView
                    android:id="@+id/name"
                    style="@style/JobInfoTextStyle"
                    android:text="@string/job_sheet_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/JobTagTextStyle"
                    android:text="@string/contact_mobile" />

                <TextView
                    android:id="@+id/phone1"
                    style="@style/JobInfoTextStyle"
                    android:text="@string/job_sheet_phone1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/JobTagTextStyle"
                    android:text="@string/contact_land_line" />

                <TextView
                    android:id="@+id/phone2"
                    style="@style/JobInfoTextStyle"
                    android:text="@string/job_sheet_phone2" />
            </LinearLayout>
        </LinearLayout>
    <!--</com.andview.refreshview.XScrollView>-->
</ScrollView>
