<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_refreshview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<com.andview.refreshview.XScrollView-->
        <!--android:id="@+id/xscrollview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                style="@style/JobTitleTextUnderlineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/job_sheet_job_details" />

            <TextView
                style="@style/JobTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/job_sheet_job_type_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/JobTagTextStyle"
                    android:text="@string/job_sheet_job_type" />

                <TextView
                    android:id="@+id/job_type"
                    style="@style/JobInfoTextStyle"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/JobTagTextStyle"
                    android:text="@string/minimum_time" />

                <TextView
                    android:id="@+id/job_min_time"
                    style="@style/JobInfoTextStyle"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/JobTagTextStyle"
                    android:text="@string/time_increments" />

                <TextView
                    android:id="@+id/time_increments"
                    style="@style/JobInfoTextStyle"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/JobTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/job_sheet_job_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/job_sheet_job_date" />

                    <TextView
                        android:id="@+id/job_date"
                        style="@style/JobInfoTextStyle"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/start_time" />

                    <TextView
                        android:id="@+id/starttime"
                        style="@style/JobInfoTextStyle"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/JobTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/estimated_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/est_time" />

                    <TextView
                        android:id="@+id/est_time"
                        style="@style/JobInfoTextStyle"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    <!--</com.andview.refreshview.XScrollView>-->

</ScrollView>
