<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                      android:id="@+id/item_refreshview"
                                      android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:orientation="vertical">

    <!--<com.andview.refreshview.XScrollView-->
        <!--android:id="@+id/xscrollview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/JobTitleTextStyle"
                    android:text="@string/time_date"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/date"/>

                    <TextView
                        android:id="@+id/date"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/start_time"/>

                    <TextView
                        android:id="@+id/starttime"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/JobTitleTextStyle"
                    android:text="@string/job_type"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/type"/>

                    <TextView
                        android:id="@+id/type"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/move_size"/>

                    <TextView
                        android:id="@+id/job_movesize"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/est_time"/>

                    <TextView
                        android:id="@+id/est_time"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/JobTitleTextStyle"
                    android:text="@string/vehicle_details"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/truck_type"/>

                    <TextView
                        android:id="@+id/truck_type"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/capacity"/>

                    <TextView
                        android:id="@+id/capacity"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/gvm"/>

                    <TextView
                        android:id="@+id/gvm"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/tm"/>

                    <TextView
                        android:id="@+id/tm"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/JobTagTextStyle"
                        android:text="@string/men"/>

                    <TextView
                        android:id="@+id/men"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/JobTitleTextStyle"
                    android:text="@string/extra_equipment"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/equipment_no"
                        style="@style/JobTagTextStyle"
                        android:text=""/>

                    <TextView
                        android:id="@+id/equipment_value"
                        style="@style/JobInfoTextStyle"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <!--</com.andview.refreshview.XScrollView>-->
</ScrollView>