<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_payment_money"
        style="@style/JobTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/job_payment_money" />
    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_payment_cash"
            android:text="@string/job_payment_cash"
            android:gravity="left"
            style="@style/job_payment_normal_text"/>
        <TextView
            android:id="@+id/tv_payment_date"
            android:text="@string/job_payment_date"
            android:gravity="right"
            style="@style/job_payment_normal_text"/>

    </LinearLayout>

</LinearLayout>